--- a/unstable/dbf-core/CHANGELOG
+++ b/unstable/dbf-core/CHANGELOG
@@ -6,9 +6,13 @@ File sorted in order of date of release
 
 0.6		STABLE
 (Release-Date)
-- dbf now can export dBASE files to SQL instruction sets   
-- minor bugfixes
+- dbf can export dBASE files to SQL instruction sets   
 - new Makefiles
+- works on AIX 4.3.3
+- new file system structure -> src contains all header and source files
+- fixes in macro definitions
+- increased macro MAX_FIELDS from 50 to 500 to solve bug #003 reported in the document BUGS
+- fixes in endian.c, reported by Uwe Steinmann
 
 
 0.5		STABLE
