--- a/dbf-core/ChangeLog
+++ b/dbf-core/ChangeLog
@@ -6,6 +6,8 @@ File sorted in order of date of release
 
 0.9.0	DEVELOPMENT
 - (Release-Date)
+- fixed column statistic if backlink is detected
+- fixed handling of deleted datasets
 - fixed --trim b|r which ate up 1 char strings
 - checks if filesize equals calculated file size (could be disabled in dbf.h
   by setting DBF_FILE_CHECK to 0)
