--- a/dbf-core/po/de.po
+++ b/dbf-core/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-27 09:25+0200\n"
+"POT-Creation-Date: 2004-08-27 11:43+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Uwe Steinmann <uwe@steinmann.cx>\n"
 "Language-Team: DE <LL@li.org>\n"
@@ -19,77 +19,155 @@ msgstr ""
 #: src/dbf.c:78
 #, c-format
 msgid "dBase Reader and Converter V. "
-msgstr ""
+msgstr "dBase Leser und Konvertierer V. "
 
 #: src/dbf.c:78
 #, c-format
 msgid ", (c) 2002 - 2004 by Bjoern Berg"
-msgstr ""
+msgstr ", (c) 2002 - 2004 bei Björn Berg"
 
 #: src/dbf.c:107
 #, c-format
 msgid "Cannot close File "
-msgstr ""
+msgstr "Kann Datei nicht schließen "
 
 #: src/dbf.c:112
 #, c-format
 msgid "Export file %s was closed successfully."
-msgstr ""
+msgstr "Export-Datei %s wurde erfolgreich geschlossen."
 
 #: src/dbf.c:216
 #, c-format
 msgid "Invalid debug level ``%s''. Must be from 0 to 9"
-msgstr ""
+msgstr "Ungültiger Debug-Lever `%s''. Muss zwischen 0 und 9 liegen."
 
 #: src/dbf.c:343
 #, c-format
 msgid "Usage: %s [options] dbf-file"
-msgstr ""
+msgstr "Aufruf: %s [Optionen] dbf-Datei"
 
 #: src/dbf.c:345
 #, c-format
 msgid "Output the contents of the dBASE table file (.dbf)."
-msgstr ""
+msgstr "Gibt den Inhalt einer dBASE Datei (.dbf) aus."
 
 #: src/dbf.c:347
 #, c-format
 msgid "Available options:"
-msgstr ""
+msgstr "Verfügbare Optionen:"
 
 #: src/dbf.c:360
 #, c-format
 msgid "Options marked with ``*'' are currently mutually exclusive."
-msgstr ""
+msgstr "Optionen, diem mit einem ``*'' markiert sind optional."
 
 #: src/dbf.c:362
 #, c-format
 msgid "The last specified takes precedence."
-msgstr ""
+msgstr "Die zuletzt angegebene Option hat Vorrang."
 
 #: src/dbf.c:364
 #, c-format
 msgid "A single dash (``-'') as a filename specifies stdin or stdout"
-msgstr ""
+msgstr "Ein Bindestring (``-'') als Dateiname steht für stdin oder stdout."
 
-#: src/sql.c:67
+#: src/sql.c:70
 #, c-format
 msgid "Invalid trim mode ``%s''. Expecting ``r'', ``l'', or ``b'' for both."
 msgstr ""
+"Ungültiger Entfernungs-Modus. Erwarte `r'', ``l'', or ``b'' für beide Seiten."
 
 #.
 #. * M stands for memo fields which are currently not
 #. * supported by dbf.
 #. * - berg, 2003-09-08
 #.
-#: src/sql.c:120
+#: src/sql.c:123
 #, c-format
 msgid ""
 "Invalid mode. Cannot convert this dBASE file. Memo fields are not yet "
 "supported."
 msgstr ""
+"Ungültiger Modus. Kann dBASE-Datei nicht konvertieren, weil Memo-Felder "
+"nicht unterstützt werden."
 
-#: src/sql.c:150
+#: src/sql.c:153
 #, c-format
 msgid ""
 "Invalid mode. Cannot convert this dBASE file. Memo fields are not supported."
 msgstr ""
+"Ungültiger Modus. Kann dBASE-Datei nicht konvertieren, weil Memo-Felder "
+"nicht unterstützt werden."
+
+#: src/csv.c:53
+#, c-format
+msgid ""
+"Separator / Escape char ``%s'' is too long -- must be a single character."
+msgstr ""
+"Das Trenn-/Maskierungszeichen ``%s'' ist zu lang. Es muss ein einzelnes "
+"Zeichen sein."
+
+#: src/statistic.c:64
+#, c-format
+msgid "Unknown (code 0x%.2X)"
+msgstr "Unbekannter Code 0x%.2X."
+
+#: src/statistic.c:79
+#, c-format
+msgid "File statistics:"
+msgstr "Datei-Statistik:"
+
+#: src/statistic.c:81
+#, c-format
+msgid "dBase version.........:"
+msgstr "dBase Version.........:"
+
+#: src/statistic.c:84
+#, c-format
+msgid "Date of last update...:"
+msgstr "Datum letztes Update..:"
+
+#: src/statistic.c:86
+#, c-format
+msgid "Number of records.....:"
+msgstr "Anzahl der Datensätze.:"
+
+#: src/statistic.c:88
+#, c-format
+msgid "Length of header......:"
+msgstr "Länge des Headers.....:"
+
+#: src/statistic.c:90
+#, c-format
+msgid "Record length.........:"
+msgstr "Datensatzlänge........:"
+
+#: src/statistic.c:92
+#, c-format
+msgid "Columns in file.......:"
+msgstr "Anzahl der Felder.....:"
+
+#: src/statistic.c:109
+#, c-format
+msgid "field name"
+msgstr "Feldname"
+
+#: src/statistic.c:111
+#, c-format
+msgid "type"
+msgstr "Type"
+
+#: src/statistic.c:113
+#, c-format
+msgid "field address"
+msgstr "Feldadresse"
+
+#: src/statistic.c:115
+#, c-format
+msgid "length"
+msgstr "Länge"
+
+#: src/statistic.c:117
+#, c-format
+msgid "field dec."
+msgstr "Dezimalst."
