--- a/dbf-core/po/de.po
+++ b/dbf-core/po/de.po
@@ -1,97 +1,143 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Copyright (C) 2004 by Uwe Steinmann
+# This file is distributed under the same license as the dbf package.
+# Uwe Steinmann <uwe@steinmann.cx>, 2004.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-27 11:43+0200\n"
+"POT-Creation-Date: 2004-08-28 15:45+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Uwe Steinmann <uwe@steinmann.cx>\n"
-"Language-Team: DE <LL@li.org>\n"
+"Language-Team: DE <uwe@steinmann.cx>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/dbf.c:78
 #, c-format
-msgid "dBase Reader and Converter V. "
-msgstr "dBase Leser und Konvertierer V. "
+msgid "Copyright 2002-2004 Bjoern Berg"
+msgstr "Copyright 2002-2004 Björn Berg"
 
-#: src/dbf.c:78
-#, c-format
-msgid ", (c) 2002 - 2004 by Bjoern Berg"
-msgstr ", (c) 2002 - 2004 bei Björn Berg"
-
-#: src/dbf.c:107
+#: src/dbf.c:117
 #, c-format
 msgid "Cannot close File "
 msgstr "Kann Datei nicht schließen "
 
-#: src/dbf.c:112
+#: src/dbf.c:122
 #, c-format
 msgid "Export file %s was closed successfully."
 msgstr "Export-Datei %s wurde erfolgreich geschlossen."
 
-#: src/dbf.c:216
+#: src/dbf.c:242
 #, c-format
 msgid "Invalid debug level ``%s''. Must be from 0 to 9"
 msgstr "Ungültiger Debug-Lever `%s''. Muss zwischen 0 und 9 liegen."
 
-#: src/dbf.c:343
+#: src/dbf.c:380
 #, c-format
 msgid "Usage: %s [options] dbf-file"
 msgstr "Aufruf: %s [Optionen] dbf-Datei"
 
-#: src/dbf.c:345
+#: src/dbf.c:382
 #, c-format
-msgid "Output the contents of the dBASE table file (.dbf)."
+msgid "Output the contents of a dBASE table file (.dbf)."
 msgstr "Gibt den Inhalt einer dBASE Datei (.dbf) aus."
 
-#: src/dbf.c:347
+#: src/dbf.c:384
 #, c-format
 msgid "Available options:"
 msgstr "Verfügbare Optionen:"
 
-#: src/dbf.c:360
+#: src/dbf.c:394
 #, c-format
-msgid "Options marked with ``*'' are currently mutually exclusive."
-msgstr "Optionen, diem mit einem ``*'' markiert sind optional."
+msgid ""
+"The options --sql, --csv, --view-info, --version are mutually exclusive."
+msgstr ""
+"Die Optionen --sql, --csv, --view-info, --version schließen sich gegenseitig "
+"aus."
 
-#: src/dbf.c:362
+#: src/dbf.c:396
 #, c-format
-msgid "The last specified takes precedence."
+msgid "The last option specified takes precedence."
 msgstr "Die zuletzt angegebene Option hat Vorrang."
 
-#: src/dbf.c:364
+#: src/dbf.c:398
 #, c-format
 msgid "A single dash (``-'') as a filename specifies stdin or stdout"
-msgstr "Ein Bindestring (``-'') als Dateiname steht für stdin oder stdout."
+msgstr "Ein Bindestrich (``-'') als Dateiname steht für stdin oder stdout."
 
-#: src/sql.c:70
+#: src/dbf.c:448
+#, c-format
+msgid ""
+"No input file specified. Please make sure that the last argument is a valid "
+"dBASE file."
+msgstr ""
+"Keine Eingabe-Datei angegeben. Bitte geben Sie als letztes Argument den "
+"Namen der dBASE-Datei an."
+
+#: src/dbf.c:455
+#, c-format
+msgid "Could not open dBASE file '%s'."
+msgstr "Konnte dBASE-Datei '%s' nicht öffnen."
+
+#: src/dbf.c:470
+#, c-format
+msgid "Unrecognized option ``%s''. Try ``--help'' for a list of options."
+msgstr ""
+"Unbekannte Option ``%s''. Benutzen Sie ``--help'' für ein Liste aller "
+"Optionen."
+
+#: src/dbf.c:478
+#, c-format
+msgid ""
+"Output file name was already specified as ``%s''. Try the --help for a list "
+"of options."
+msgstr ""
+"Ausgabe-Datei wurde bereits angegeben als ``%s''. Benutzen Sie ``--help'' "
+"für ein Liste aller Optionen."
+
+#: src/dbf.c:487
+#, c-format
+msgid ""
+"Input file name is equal to output file name. Please choose a different "
+"output file name."
+msgstr ""
+"Name der Eingabe- und Ausgabe-Datei sind identisch. Bitte verwenden Sie "
+"einen anderen Namen für die Ausgabe-Datei."
+
+#: src/dbf.c:524
+#, c-format
+msgid "SQL mode requires a tablename to be set, if the output goes to stdout."
+msgstr ""
+"SQL-Modus erfordert das Setzen eines Tabellennamens, wenn die Ausgabe nach "
+"stdout geht."
+
+#: src/dbf.c:543
+#, c-format
+msgid "Export from %s to %s"
+msgstr "Export von %s nach %s"
+
+#: src/dbf.c:566
+#, c-format
+msgid "The row %i is set to 'deleted'."
+msgstr "Der Datensatz $i ist auf 'gelöscht' gesetzt."
+
+#: src/sql.c:79
 #, c-format
 msgid "Invalid trim mode ``%s''. Expecting ``r'', ``l'', or ``b'' for both."
 msgstr ""
-"Ungültiger Entfernungs-Modus. Erwarte `r'', ``l'', or ``b'' für beide Seiten."
+"Ungültiger Entfernungs-Modus. Erwarte ``r'', ``l'', or ``b'' für beide "
+"Seiten."
 
 #.
 #. * M stands for memo fields which are currently not
 #. * supported by dbf.
 #. * - berg, 2003-09-08
 #.
-#: src/sql.c:123
-#, c-format
-msgid ""
-"Invalid mode. Cannot convert this dBASE file. Memo fields are not yet "
-"supported."
-msgstr ""
-"Ungültiger Modus. Kann dBASE-Datei nicht konvertieren, weil Memo-Felder "
-"nicht unterstützt werden."
-
-#: src/sql.c:153
+#: src/sql.c:129 src/sql.c:159
 #, c-format
 msgid ""
 "Invalid mode. Cannot convert this dBASE file. Memo fields are not supported."
@@ -171,3 +217,10 @@ msgstr "Länge"
 #, c-format
 msgid "field dec."
 msgstr "Dezimalst."
+
+#~ msgid "dBase Reader and Converter, version "
+#~ msgstr "dBase Leser und Konvertierer, Version "
+
+#~ msgid "Options marked with ``*'' are currently mutually exclusive."
+#~ msgstr ""
+#~ "Die mit einem ``*'' markierten Optionen, schließen sich gegenseitig aus."
