- added link to article at Borland about dbase format

--- a/libdbf/README
+++ b/libdbf/README
@@ -2,4 +2,6 @@ libdbf
 =====
 C-library for reading dbase files.
 
-
+Check out
+http://community.borland.com/article/0,1410,15838,00.html
+for a description of the dBASE format
