--- a/dbf-core/ChangeLog
+++ b/dbf-core/ChangeLog
@@ -6,6 +6,8 @@ File sorted in order of date of release
 
 0.9.0		DEVELOPMENT
 - (Release-Date)
+- new option --usecopy allows to use COPY instead of INSERT statement
+  in sql output.
 - use libdbf for dBASE file access
 - added option --nocreate, --tablename, --empty-str-is-null
 - various speed improvements
