--- a/dbf-core/ChangeLog
+++ b/dbf-core/ChangeLog
@@ -6,6 +6,9 @@ File sorted in order of date of release
 
 0.9.0		DEVELOPMENT
 - (Release-Date)
+- fixed output of numbers in sql output (sometimes a 'NULL' preceeded
+  the number)
+- fixed wasting of memory in sql.c
 - exporting dbase is possible
 - new options --quiet, --start-record and --num-records
 - new option --usecopy allows to use COPY instead of INSERT statement
