--- a/dbf-core/INSTALL
+++ b/dbf-core/INSTALL
@@ -1,123 +1,236 @@
+Installation Instructions
+*************************
 
-INSTALLATION INSTRUCTIONS
-=========================
+Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005 Free
+Software Foundation, Inc.
 
-Author: Bjoern Berg, clergyman@gmx.de
+This file is free documentation; the Free Software Foundation gives
+unlimited permission to copy, distribute and modify it.
 
-History:
+Basic Installation
+==================
 
-$Log: INSTALL,v $
-Revision 1.4  2004/03/21 15:34:45  rollinhand
-New instructions for MacOS and Windows added
+These are generic installation instructions.
 
+   The `configure' shell script attempts to guess correct values for
+various system-dependent variables used during compilation.  It uses
+those values to create a `Makefile' in each directory of the package.
+It may also create one or more `.h' files containing system-dependent
+definitions.  Finally, it creates a shell script `config.status' that
+you can run in the future to recreate the current configuration, and a
+file `config.log' containing compiler output (useful mainly for
+debugging `configure').
 
-This document is splitted in two parts:
-	- PACKAGE DESCRIPTION
-	- INSTALLATION INSTRUCTIONS
--------------------------------------------------------------------------------
+   It can also use an optional file (typically called `config.cache'
+and enabled with `--cache-file=config.cache' or simply `-C') that saves
+the results of its tests to speed up reconfiguring.  (Caching is
+disabled by default to prevent problems with accidental use of stale
+cache files.)
 
-PACKAGE DESCRIPTION
-===================
+   If you need to do unusual things to compile the package, please try
+to figure out how `configure' could check whether to do them, and mail
+diffs or instructions to the address given in the `README' so they can
+be considered for the next release.  If you are using the cache, and at
+some point `config.cache' contains results you don't want to keep, you
+may remove or edit it.
 
-There are several packages of dbf available. In the following, I will explain
-which package you need for your platform:
+   The file `configure.ac' (or `configure.in') is used to create
+`configure' by a program called `autoconf'.  You only need
+`configure.ac' if you want to change it or regenerate `configure' using
+a newer version of `autoconf'.
 
-dbf-x.x.src.tar.gz:
--------------------
-This package contains all sources and includes, the complete documentation but
-no binaries. You have to compile your own binaries with this package, this also
-recommends several different development tools on your operating system.
+The simplest way to compile this package is:
 
-dbf-x.x.bin.ELF.zip:
---------------------
-This package contains a binary release for Linux/Unix operating systems which
-runs on a x86 architecture.
+  1. `cd' to the directory containing the package's source code and type
+     `./configure' to configure the package for your system.  If you're
+     using `csh' on an old version of System V, you might need to type
+     `sh ./configure' instead to prevent `csh' from trying to execute
+     `configure' itself.
 
-dbf-x.x.bin.AXP.zip:
---------------------
-This package contains a binary release Linux/Unix operating systems which runs
-on an Alpha/RISC architecture.
+     Running `configure' takes awhile.  While running, it prints some
+     messages telling which features it is checking for.
 
-dbf-x.x.bin.PPC.zip:
---------------------
-This package contains a binary release Linux/Unix operating systems which runs
-on a PowerPC architecture.
+  2. Type `make' to compile the package.
 
-dbf-x.x.win.zip:
-----------------
-This package contains a binary release for Windows 95/98/ME/NT/2000/XP which 
-runs on a x86 architecture. Windows XP Home Edition is not supported.
+  3. Optionally, type `make check' to run any self-tests that come with
+     the package.
 
--------------------------------------------------------------------------------
+  4. Type `make install' to install the programs and any data files and
+     documentation.
 
-INSTALLATION INSTRUCTIONS
-=========================
+  5. You can remove the program binaries and object files from the
+     source code directory by typing `make clean'.  To also remove the
+     files that `configure' created (so you can compile the package for
+     a different kind of computer), type `make distclean'.  There is
+     also a `make maintainer-clean' target, but that is intended mainly
+     for the package's developers.  If you use it, you may have to get
+     all sorts of other programs in order to regenerate files that came
+     with the distribution.
 
-These are installation instructions for dbf:
+Compilers and Options
+=====================
 
-Linux
-=====
+Some systems require unusual options for compilation or linking that the
+`configure' script does not know about.  Run `./configure --help' for
+details on some of the pertinent environment variables.
 
-Since version 0.3.2 dbf comes with a Makefile, which helps to install dbf
-correctly. To change the directory you want to install dbf and change the entry
-PREFIX = /usr/local/bin.
+   You can give `configure' initial values for configuration parameters
+by setting variables in the command line or in the environment.  Here
+is an example:
 
-To install, type:
+     ./configure CC=c89 CFLAGS=-O2 LIBS=-lposix
 
-make
+   *Note Defining Variables::, for more details.
 
-and as root:
+Compiling For Multiple Architectures
+====================================
 
-make install (or su -c 'make install')
+You can compile the package for more than one kind of computer at the
+same time, by placing the object files for each architecture in their
+own directory.  To do this, you must use a version of `make' that
+supports the `VPATH' variable, such as GNU `make'.  `cd' to the
+directory where you want the object files and executables to go and run
+the `configure' script.  `configure' automatically checks for the
+source code in the directory that `configure' is in and in `..'.
 
-See FAQ first if you have installation problems.
+   If you have to use a `make' that does not support the `VPATH'
+variable, you have to compile the package for one architecture at a
+time in the source code directory.  After you have installed the
+package for one architecture, use `make distclean' before reconfiguring
+for another architecture.
 
-See also README for more details on how to handle dbf and
-http://anubisnet.sf.net/support.php for help on installation problems and
-handling.
+Installation Names
+==================
 
+By default, `make install' will install the package's files in
+`/usr/local/bin', `/usr/local/man', etc.  You can specify an
+installation prefix other than `/usr/local' by giving `configure' the
+option `--prefix=PREFIX'.
 
-WINDOWS
-=======
+   You can specify separate installation prefixes for
+architecture-specific files and architecture-independent files.  If you
+give `configure' the option `--exec-prefix=PREFIX', the package will
+use PREFIX as the prefix for installing programs and libraries.
+Documentation and other data files will still use the regular prefix.
 
-Versions below release 0.6
---------------------------
+   In addition, if you use an unusual directory layout you can give
+options like `--bindir=DIR' to specify different values for particular
+kinds of files.  Run `configure --help' for a list of the directories
+you can set and what kinds of files go in them.
 
-You have to compile dbf by hand, using any compiler you want to.
-More information on http://anubisnet.sf.net/support or in the document FAQ
-attached with the dbf package.
+   If the package supports it, you can cause programs to be installed
+with an extra prefix or suffix on their names by giving `configure' the
+option `--program-prefix=PREFIX' or `--program-suffix=SUFFIX'.
 
-Versions since release 0.6
---------------------------
+Optional Features
+=================
 
-If you have Borland C Compiler installed, you can easily compile dbf
-yourself. Just open a command line switch to dbf's src directory and
-type in:
+Some packages pay attention to `--enable-FEATURE' options to
+`configure', where FEATURE indicates an optional part of the package.
+They may also pay attention to `--with-PACKAGE' options, where PACKAGE
+is something like `gnu-as' or `x' (for the X Window System).  The
+`README' should mention any `--enable-' and `--with-' options that the
+package recognizes.
 
-	make -f Makefile.bcc
-	
-BCC will create a binary named dbf.exe. If BCC is missing some Includes
-or Libraries open the builtins.mak in the src-directory in any text-editor
-of your choice and adopt the switches INCDIR and LIBDIR.
+   For packages that use the X Window System, `configure' can usually
+find the X include and library files automatically, but if it doesn't,
+you can use the `configure' options `--x-includes=DIR' and
+`--x-libraries=DIR' to specify their locations.
 
-Former documentations stated also compilation with Microsofts nmake from
-VisualStudio. This part is now deprecated because dbf.mak is no longer
-up to date. And any try to use nmake with dbf.mak will fail.
+Specifying the System Type
+==========================
 
-For more information how to get and install BCC, please visit the following
-URL: http://dbf.berlios.de/support/doc/compile/windows.html
+There may be some features `configure' cannot figure out automatically,
+but needs to determine by the type of machine the package will run on.
+Usually, assuming the package is built to be run on the _same_
+architectures, `configure' can figure that out, but if it prints a
+message saying it cannot guess the machine type, give it the
+`--build=TYPE' option.  TYPE can either be a short name for the system
+type, such as `sun4', or a canonical name which has the form:
 
+     CPU-COMPANY-SYSTEM
 
-MAC OS
-======
+where SYSTEM can have one of these forms:
 
-MacOS X:
---------
+     OS KERNEL-OS
 
-If you have installed a development environment based on the GNU tools, like
-GCC and GDB, you can orientate on the Linux installation guide.
+   See the file `config.sub' for the possible values of each field.  If
+`config.sub' isn't included in this package, then this package doesn't
+need to know the machine type.
 
-MacOS < 10.x
-------------
+   If you are _building_ compiler tools for cross-compiling, you should
+use the `--target=TYPE' option to select the type of system they will
+produce code for.
 
-dbf is not compatible with older versions than MacOS X.
+   If you want to _use_ a cross compiler, that generates code for a
+platform different from the build platform, you should specify the
+"host" platform (i.e., that on which the generated programs will
+eventually be run) with `--host=TYPE'.
+
+Sharing Defaults
+================
+
+If you want to set default values for `configure' scripts to share, you
+can create a site shell script called `config.site' that gives default
+values for variables like `CC', `cache_file', and `prefix'.
+`configure' looks for `PREFIX/share/config.site' if it exists, then
+`PREFIX/etc/config.site' if it exists.  Or, you can set the
+`CONFIG_SITE' environment variable to the location of the site script.
+A warning: not all `configure' scripts look for a site script.
+
+Defining Variables
+==================
+
+Variables not defined in a site shell script can be set in the
+environment passed to `configure'.  However, some packages may run
+configure again during the build, and the customized values of these
+variables may be lost.  In order to avoid this problem, you should set
+them in the `configure' command line, using `VAR=value'.  For example:
+
+     ./configure CC=/usr/local2/bin/gcc
+
+causes the specified `gcc' to be used as the C compiler (unless it is
+overridden in the site shell script).  Here is a another example:
+
+     /bin/bash ./configure CONFIG_SHELL=/bin/bash
+
+Here the `CONFIG_SHELL=/bin/bash' operand causes subsequent
+configuration-related scripts to be executed by `/bin/bash'.
+
+`configure' Invocation
+======================
+
+`configure' recognizes the following options to control how it operates.
+
+`--help'
+`-h'
+     Print a summary of the options to `configure', and exit.
+
+`--version'
+`-V'
+     Print the version of Autoconf used to generate the `configure'
+     script, and exit.
+
+`--cache-file=FILE'
+     Enable the cache: use and save the results of the tests in FILE,
+     traditionally `config.cache'.  FILE defaults to `/dev/null' to
+     disable caching.
+
+`--config-cache'
+`-C'
+     Alias for `--cache-file=config.cache'.
+
+`--quiet'
+`--silent'
+`-q'
+     Do not print messages saying which checks are being made.  To
+     suppress all normal output, redirect it to `/dev/null' (any error
+     messages will still be shown).
+
+`--srcdir=DIR'
+     Look for the package's source code in directory DIR.  Usually
+     `configure' can determine that directory automatically.
+
+`configure' also accepts some other, not widely useful, options.  Run
+`configure --help' for more details.
+
